<!--Chris Garcia -->
<!--n01371506 -->
<!--Section: 0CB -->

<resources>
    <string name="app_name">TabsLayout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FullName">Chris Garcia</string>
    <string name="noSportSelected">" NO SPORT"</string>
    <string name="requestkey">requestKey</string>
    <string name="bundleKey">selectedText</string>
    <string name="no_data_passed">NO DATA PASSED</string>
    <string name="basketball">BasketBall</string>
    <string name="baseball">Baseball</string>
    <string name="sport">SPORT</string>
    <string name="submit">Submit</string>
    <string name="other">Other</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="select_your_color">Select Your Color:</string>
    <string name="hockey">Hockey</string>
</resources>