<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <View
        android:id="@+id/CHRview"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_marginStart="52dp"

        android:layout_marginTop="88dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CHRtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="44dp"
        android:text="@string/FullName"
        android:textColor="@color/tabIndicatorColor"
        android:textFontWeight="600"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/CHRtextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="164dp"
        android:text="@string/select_your_color"
        android:textColor="@color/colorblue"
        android:textSize="15dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/CHRRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/CHRradioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:checked="true"
            android:layout_marginBottom="8dp" />

        <RadioButton
            android:id="@+id/CHRradioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:textColor="@color/colorYellow"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <RadioButton
            android:id="@+id/CHRradioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/red"
            android:textColor="@color/tabIndicatorColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/CHRradioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

    </RadioGroup>

    <Button
        android:id="@+id/CHRbutton"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="384dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
